--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "puppeteer": "^19.4.1"
+    "puppeteer": "^19.4.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
+    "random-useragent": "^0.5.0",
+    "user-agents": "^1.0.1245"
   }
 }
