--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "https": "^1.0.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.4.1",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
     "random-useragent": "^0.5.0",
+    "request": "^2.88.2",
     "user-agents": "^1.0.1245"
   },
   "pkg": {
